--- a/pierwsza_app/templates/pierwsza_app/panel.html
+++ b/pierwsza_app/templates/pierwsza_app/panel.html
@@ -206,7 +206,7 @@
         <th class="lp">Lp</th>
         <th>Nazwisko i imię</th>
         <th>Stanowisko</th>
-        <th>Kontakt</th> <!-- NOWA KOLUMNA -->
+        <th>E-mail</th> <!-- NOWA KOLUMNA -->
         <th class="num">Dni robocze</th>
         <th class="num">Dni świąteczne</th>
         <th class="num">Chorobowe</th>
